--- a/style.css
+++ b/style.css
@@ -118,4 +118,11 @@ footer {
     border: 4px solid #ff0033;
     box-shadow: 0 0 12px rgba(255, 0, 51, 0.5);
     margin-bottom: 15px;
+    transition: all 0.3s ease-in-out;
+}
+
+.profile-img:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px rgba(255, 0, 51, 0.75);
+    cursor: pointer;
 }
