--- a/style.css
+++ b/style.css
@@ -171,14 +171,11 @@ footer {
 
 .social-circle {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 200%;
-    height: 200%;
-    /*pointer-events: none; /* allows clicking through unless hovered */
-    /*opacity: 0; */
-    /*transition: opacity 0.5s ease;*/
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
 }
 
 .orbit-style:hover .social-circle {
@@ -224,4 +221,22 @@ footer {
 .orbit-style:hover .profile-img {
     transform: scale(1.05);
     box-shadow: 0 0 20px rgba(255, 0, 51, 0.75);
+}
+
+.icon-left {
+    top: 50%;
+    left: -25px;
+    transform: translateY(-50%);
+}
+
+.icon-right {
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%);
+}
+
+.icon-bottom {
+    bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
 }
