--- a/style.css
+++ b/style.css
@@ -314,3 +314,9 @@ footer {
 .skills {
     margin-top: 50px;
 }
+
+.exp-item {
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #333;
+}
